# qbot-cli

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
skill/qqbot-notifier/: SKILL.md
src/qqbot_cli/: api.py  main.py  serve.py
